<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationCreateActivity"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Make a Reservation"
                android:textColor="@color/green"
                android:textSize="28sp"
                android:gravity="center"
                android:paddingBottom="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/name"
                style="@style/CustomTextInputLayout"
                app:hintTextColor="@color/green">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameReservation"
                    />
            </com.google.android.material.textfield.TextInputLayout>

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:hint="@string/nic"-->
<!--                style="@style/CustomTextInputLayout"-->
<!--                app:hintTextColor="@color/green">-->

<!--                <EditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/nicReservation"-->
<!--                    />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->


            <Spinner
                    android:id="@+id/routeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/custom_spinner_border"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/phone"
                style="@style/CustomTextInputLayout"
                app:hintTextColor="@color/green">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneReservation"
                    android:inputType="numberDecimal"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/date"
                style="@style/CustomTextInputLayout"
                app:hintTextColor="@color/green">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dateReservation"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="Seat No"
                style="@style/CustomTextInputLayout"
                app:hintTextColor="@color/green">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seatReservation"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/reserveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reserve"
                android:layout_below="@id/passwordTextInputLayout"
                android:layout_marginTop="16dp"
                style="@style/CustomButtonStyle"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>